# vtools3

./: .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  setup_devenv.bat
.github/workflows/: python-package-conda.yml
conda.recipe/: meta.yaml
data/: sample_series.py  vtime.py
docs/: index.html
docs/doctrees/: authors.doctree  concepts.doctree  contributing.doctree  daylight_savings.doctree  download.doctree  environment.pickle  filter.doctree  filters.doctree  function_gen.doctree  history.doctree  index.doctree  installation.doctree  interpolation.doctree  modules.doctree  pyhecdss.doctree  readme.doctree  usage.doctree  vtools.data.doctree  vtools.datastore.doctree  vtools.doctree  vtools.functions.doctree
docs/html/: .buildinfo  authors.html  concepts.html  contributing.html  daylight_savings.html  download.html  filter.html  filters.html  function_gen.html  genindex.html  history.html  index.html  installation.html  interpolation.html  modules.html  objects.inv  py-modindex.html  pyhecdss.html  readme.html  search.html  searchindex.js  usage.html  vtools.data.html  vtools.datastore.html  vtools.functions.html  vtools.html
docsrc/: Makefile  concepts.rst  conf.py  daylight_savings.rst  doall.bat  filter.rst  function_gen.rst  index.rst  installation.rst  make.bat  modules.rst  readme.rst  requirements.txt  vtools.data.rst  vtools.datastore.rst  vtools.functions.rst  vtools.rst
docsrc/_templates/: layout.html
docsrc/notebooks/: dfm_trimbur_rw_vns_msd.yaml  extrapolation.ipynb  filters.ipynb  interpolate.ipynb  merge_splice.ipynb  spline.ipynb  tidal_envelope.ipynb  transition.ipynb
tests/: 2018daily006.csv  godin.csv  godintest-vtools.csv  godintest1.csv  pytest.ini  test_climatology.py  test_coarsen.py  test_compositional_name_semantics.py  test_download.py  test_download_cimis.py  test_error_detect.py  test_extrapolation.py  test_filter.py  test_filter3.py  test_filter4.py  test_gap.py  test_godin_filter.py  test_ha_utils.py  test_indexing.py  test_interval_ops.py  test_lag.py  test_medianAD.py  test_merge_splice.py  test_read_ts.py  test_rhistinterp.py  test_timeseries.py  test_transition.py  test_transition_arg_alignment.py  test_unit_conversions.py  test_write_ts.py  test_write_ts_csv_2009.csv  test_write_ts_csv_2010.csv  test_write_ts_csv_2011.csv
tests/test_data/: 9414290_water_level.txt  9414290_water_level_2020.txt  9414290_water_temperature.txt  dto.csv  fal_flow_gap_middle.csv  jer_ec.csv  s71_mzmroar_msl_turb_inst_2018_2019.csv  vtide_example.txt
vtools/: __init__.py  __main__.py  _version.py
vtools/data/: dst.py  duplicate_index.py  gap.py  indexing.py  sample_series.py  timeseries.py  vis_gap.py  vtime.py
vtools/datastore/: __init__.py  cdec_stations.txt  download_cdec.py  download_cimis.py  download_ncro.py  download_noaa.py  download_nwis.py  download_wdl.py  noaa_stations.txt  nwis_stations.txt  process_station_variable.py  read_cdec.py  read_scalar.py  read_ts.py  read_usbr.py  station_config.py  station_config.yaml  station_dbase.csv  station_info.py  test_read_ts.py  variable_mappings.csv  variables.csv  wdl_file_alias.csv  wdl_stations.txt  write_ts.py
vtools/functions/: blend.py  (+33 more)
(+227 files in other folders)
