[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vtools"
dynamic = ["version"] # Placeholder; setuptools-scm will manage this
description = "Timeseries analysis and processing tools using pandas/xarray"
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
authors = [
    { name = "California Department of Water Resources", email = "Eli.Ateljevich@water.ca.gov"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"	
]
keywords = ["vtools"]
dependencies = [
    "numpy",
    "pandas",
	"numba",
    "xarray",
    "dask",
    "dask-expr",
    "matplotlib",
    "scikit-learn",
    "scipy",
    "statsmodels>=0.13",
	"pint",
    "click"
]

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "numpydoc"
]
test = [
    "pytest>=3",
    "pytest-cov",
    "tox",
    "click",
    "setuptools-scm",
]
build = [
    "build",
    "pip",
    "setuptools",
    "wheel",
    "setuptools-scm"
]
[project.urls]
Homepage = "https://github.com/CADWRDeltaModeling/vtools3"

[tool.setuptools]
include-package-data = true

[tool.flake8]
exclude = ["docs"]

[tool.pytest.ini_options]
collect_ignore = ["setup.py"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["vtools*"]
exclude = ["docsrc"]

[tool.setuptools_scm]
version_file="vtools/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"

[project.scripts]
vtl = "vtools.__main__:cli"
# separate_species = "vtools.functions.separate_species:main" # suppressed, for now use "vtl separate_species"